--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -142,3 +142,56 @@ nav .menu a:hover {
    color: #474747;
 }
 /* about css end */
+
+/* skills sec */
+#skills {
+    padding-bottom: 130px;
+    padding-left: 230px;
+    padding-right: 230px;
+}
+#skills .skills-container {
+  
+}
+.skills-container .skills-heading {
+     text-align: center;
+}
+.skills-heading h2{
+   font-weight: bold;
+   font-size: 35px;
+   color: #181818;
+}
+.skills-heading p{
+   font-size: 18px;
+   line-height: 30px;
+   color: #757575;
+   padding-top: 30px;
+   padding-bottom: 50px;
+}
+.skills-container .skills-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+    padding: 30px; 
+}
+.skills-content .skills-card{
+     box-shadow: 0 6px 50px rgba(0, 0, 0, 0.08);
+     border-radius: 5px;
+     padding-top: 30px;
+     padding-bottom: 30px;
+     padding-left: 30px;
+     padding-right: 33px;
+     max-width: 267px;
+}
+.skills-content .skills-card h3{
+   font-weight: bold;
+   font-size: 20px;
+   color: #181818;
+   padding-top: 30px;
+   padding-bottom: 20px;
+}
+.skills-content .skills-card p{
+   font-size: 16px;
+   color: #757575;
+   line-height: 28px;
+}
