--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -195,3 +195,112 @@ nav .menu a:hover {
    color: #757575;
    line-height: 28px;
 }
+/* resume section*/
+#resume .section-heading {
+    margin: 0 auto;
+    text-align: center;
+    font: bold;
+    font-size: 30px;
+    color: #181818;
+}
+
+.resume-container .education{
+    
+}
+.resume-container .education .sec-title{
+      font-weight: bold;
+      font-size: 30px;
+      color: #474747;
+}
+ .resume-card {
+    font-weight: bold;
+    font-size: 25px;
+    color: #474747;
+    padding-bottom: 10px;
+    padding-top: 30px;
+}
+ .card-info {
+    font-weight: 600;
+    font-size: 20px;
+    color: #757575;
+}
+ .card-text {
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+.Experience .sec-title{
+     font-weight: bold;
+     font-size: 30px;
+     color: #474747;
+}
+.resume-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 24px;
+    padding: 113px 230px;
+
+}
+.text-center {
+    text-align: center;
+    padding-top: 50px;
+}
+#footer {
+    padding: 130px 230px;
+    background-color: #FFF8F3;
+    margin-top: 113px;
+}
+#footer .footer-container {
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+     gap: 117px;
+     margin: 0 auto;
+}
+ .footer-container .social{
+     max-width: 562px;
+}
+.social h2 {
+    font-weight: bold;
+    font-size: 35px;
+    color: #181818;
+}
+.social p {
+    line-height: 28px;
+    font-size: 16px;
+    color: #474747;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+.footer-container .icons {
+ display: flex;
+ align-items: center;
+ gap: 24px;
+ cursor: pointer;
+}
+.footer-container h2 {
+    font-size: 35PX;
+    font-weight: bold;
+    color: #181818;
+}
+.footer-container .form input[type="text"] {
+    max-width: 461px;
+    border: none;
+    padding: 18px 30px;
+    border-radius: 5px;
+}
+.footer-container .form input[type="email"] {
+    max-width: 461px;
+    border: none;
+    padding: 18px 30px;
+    margin: 24px 0;
+    border-radius: 5px;
+}
+.form textarea {
+  max-width: 461px;
+    border: none;
+    padding: 18px 30px;  
+}
